--- a/csharp/RocksDbSharp.csproj
+++ b/csharp/RocksDbSharp.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
-    <PackageId>RocksDB</PackageId>
-    <Authors>Curiosity GmbH, Warren Falk</Authors>
-    <Company>Curiosity GmbH, Warren Falk</Company>
+    <PackageId>Nethermind.RocksDB.Bindings</PackageId>
+    <Authors>Nethermind, Curiosity GmbH, Warren Falk</Authors>
+    <Company>Nethermind, Curiosity GmbH, Warren Falk</Company>
     <Description>.NET bindings for RocksDB, including the matching native libraries for Linux, Windows and macOS.</Description>
     <PackageTags>rocksdb leveldb embedded database</PackageTags>
     <Copyright>(c) Copyright 2016 Warren Falk, (c) Copyright 2023 Curiosity GmbH</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>BSD-2-Clause</PackageLicenseExpression>
-    <Version>0.0.42</Version>
+    <Version></Version>
     <IncludeReferencedProjects>true</IncludeReferencedProjects>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <PackageIcon>logo-128.png</PackageIcon>
+    <PackageIcon></PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -42,11 +42,11 @@
 
     <!--OSX-->
     <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/librocksdb.dylib" Link="librocksdb.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/librocksdb.dylib" />
-    <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/liblz4.dylib" Link="liblz4.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/liblz4.dylib" />
-    <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/libsnappy.dylib" Link="libsnappy.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/libsnappy.dylib" />
-    <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/libz.dylib" Link="libz.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/libz.dylib" />
+    <!-- <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/liblz4.dylib" Link="liblz4.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/liblz4.dylib" /> -->
+    <!-- <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/libsnappy.dylib" Link="libsnappy.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/libsnappy.dylib" /> -->
+    <!-- <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/libz.dylib" Link="libz.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/libz.dylib" /> -->
     <!-- <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/libbz.dylib" Link="libbz.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/libbz.dylib" /> -->
-    <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/libzstd.dylib" Link="libzstd.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/libzstd.dylib" />
+    <!-- <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-x64/native/libzstd.dylib" Link="libzstd.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/libzstd.dylib" /> -->
 
     <!--OSX / ARM, copied from the RocksDB_JNI builds https://repo1.maven.org/maven2/org/rocksdb/rocksdbjni/ -->
     <Content CopyToOutputDirectory="PreserveNewest" Include="runtimes/osx-arm64/native/librocksdb.dylib" Link="librocksdb.dylib" Pack="true" PackagePath="runtimes/osx-arm64/native/librocksdb.dylib" />
@@ -54,10 +54,10 @@
   </ItemGroup>
 
 
-  <ItemGroup>
+  <!-- <ItemGroup>
     <None Include="logo-128.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-  </ItemGroup>
+  </ItemGroup> -->
 </Project>
