--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,12 @@ on:
   workflow_dispatch:
     inputs:
       version:
+        type: string
         description: Source package version
+        required: true
+      ref:
+        type: string
+        description: Source repo ref
         required: true
   
 jobs:
@@ -14,8 +19,16 @@ jobs:
     name: Publish Nethermind.RocksDB.Bindings
     runs-on: ubuntu-latest
     steps:
+      - name: Check out curiosity-ai/rocksdb-sharp repository
+        uses: actions/checkout@v4
+        with:
+          repository: curiosity-ai/rocksdb-sharp
+          ref: ${{ github.event.inputs.ref }}
+          path: origin
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          path: overrides
       - name: Download official builds
         run: |
           version=$(echo "${{ github.event.inputs.version }}" | sed 's|\(.*\)\..*|\1|')
@@ -23,13 +36,16 @@ jobs:
           curl -sL $url -o rocksdbjni.jar
           mkdir rocksdbjni
           unzip rocksdbjni.jar -d rocksdbjni
-          mv rocksdbjni/librocksdbjni-linux-aarch64.so csharp/runtimes/linux-arm64/native/librocksdb.so
-          mv rocksdbjni/librocksdbjni-linux64.so csharp/runtimes/linux-x64/native/librocksdb.so
-          mv rocksdbjni/librocksdbjni-osx-arm64.jnilib csharp/runtimes/osx-arm64/native/librocksdb.dylib
-          mv rocksdbjni/librocksdbjni-osx-x86_64.jnilib csharp/runtimes/osx-x64/native/librocksdb.dylib
-          mv rocksdbjni/librocksdbjni-win64.dll csharp/runtimes/win-x64/native/rocksdb.dll
+      - name: Replace files
+        run: |
+          mv rocksdbjni/librocksdbjni-linux-aarch64.so origin/csharp/runtimes/linux-arm64/native/librocksdb.so
+          mv rocksdbjni/librocksdbjni-linux64.so origin/csharp/runtimes/linux-x64/native/librocksdb.so
+          mv rocksdbjni/librocksdbjni-osx-arm64.jnilib origin/csharp/runtimes/osx-arm64/native/librocksdb.dylib
+          mv rocksdbjni/librocksdbjni-osx-x86_64.jnilib origin/csharp/runtimes/osx-x64/native/librocksdb.dylib
+          mv rocksdbjni/librocksdbjni-win64.dll origin/csharp/runtimes/win-x64/native/rocksdb.dll
+          cp -f overrides/csharp/RockDbSharp.csproj origin/csharp/RockDbSharp.csproj
       - name: Submit package
-        working-directory: csharp
+        working-directory: origin/csharp
         run: | 
           dotnet pack -c release \
             -p:Version=${{ github.event.inputs.version }}-preview.${{ github.run_number }} \
