--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,9 +33,10 @@ jobs:
         run: |
           version=$(echo "${{ github.event.inputs.version }}" | sed 's|\(.*\)\..*|\1|')
           url=https://repo1.maven.org/maven2/org/rocksdb/rocksdbjni/$version/rocksdbjni-$version.jar
-          curl -sL $url -o rocksdbjni.zip
+          curl -sL $url -o rocksdbjni.jar
           mkdir rocksdbjni
-          unzip rocksdbjni.zip -d rocksdbjni
+          cd rocksdbjni
+          jar xvf ../rocksdbjni.jar
       - name: Replace files
         run: |
           mv rocksdbjni/librocksdbjni-linux-aarch64.so origin/csharp/runtimes/linux-arm64/native/librocksdb.so
